--- a/lab1(consegna)/risi_emilio_lab01.ipynb
+++ b/lab1(consegna)/risi_emilio_lab01.ipynb
@@ -30,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import the necessary packages\n",
     "import numpy as np\n",
     "import cv2 as cv\n",
-    "from matplotlib import pyplot as plt\n"
+    "from matplotlib import pyplot as plt"
    ]
   },
   {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,19 +94,12 @@
     "    chan = []\n",
     "    for i in range(0,2):\n",
     "        chan.append(cv.calcHist([img], [i], None, [256], [0, 256]))\n",
-    "\n",
-    "    return chan\n",
-    "            \n",
-    "        \n",
-    "        \n",
-    "    \n",
-    "    \n",
-    "\n"
+    "    return chan\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +118,6 @@
     "   \n",
     "\n",
     "    # Add your code here to generate the matplotlib figurecontaining the histograms\n",
-    "    \n",
     "\n",
     "    # Convert figure to canvas\n",
     "    canvas = plt.get_current_fig_manager().canvas\n",
@@ -144,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,34 +167,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'hist' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Emilio\\Desktop\\lab computer vision\\lab1\\template_lab01.ipynb Cell 11\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m#DISPLAY THE IMAGE\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m#cv.imshow(\"barb\", img)\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39m#cv.waitKey(0)\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m#cv.destroyWindow(\"barb\")\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39m#histogram data\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m hD \u001b[39m=\u001b[39m calc_hists(img)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m show_histogram(hD)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39m# Add your code here\u001b[39;00m\n",
+      "\u001b[1;32mc:\\Users\\Emilio\\Desktop\\lab computer vision\\lab1\\template_lab01.ipynb Cell 11\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mShows the histogram of the image.\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39m\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m    img (numpy.ndarray): image containing the histograms\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39m \"\"\"\u001b[39;00m   \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39m# Add your code here to generate the matplotlib figurecontaining the histograms\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39m#plt.hist(hists[0]) \u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m plt\u001b[39m.\u001b[39mplot(hist[\u001b[39m0\u001b[39m])   \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m \u001b[39m# Convert figure to canvas\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m canvas \u001b[39m=\u001b[39m plt\u001b[39m.\u001b[39mget_current_fig_manager()\u001b[39m.\u001b[39mcanvas\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'hist' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Load image and and compute its histogram\n",
+    "\n",
+    "# Add your code here\n",
+    "\n",
     "img = cv.imread('./data/barbecue.jpg')\n",
     "\n",
-    "cv.namedWindow('windows')\n",
+    "hD = calc_hists(img)\n",
     "\n",
-    "cv.imshow('Loaded Image', img)\n",
-    "\n",
-    "cv.waitKey(0)\n",
-    "#histogram data\n",
-    "#hD = calc_hists(img)\n",
-    "\n",
-    "\n",
-    "\n",
-    "#show_histogram(hD)\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "# Add your code here"
+    "show_histogram(hD)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -364,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -434,9 +429,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unmatched ')' (745883566.py, line 20)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[16], line 20\u001b[1;36m\u001b[0m\n\u001b[1;33m    def __call__(self, image: np.ndarray)) -> None:\u001b[0m\n\u001b[1;37m                                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unmatched ')'\n"
+     ]
+    }
+   ],
    "source": [
     "# Define the main Filter class with the common methods\n",
     "# (this class will be used as a base class for the other filters)\n",
