--- a/lab1(consegna)/template_lab01.ipynb
+++ b/lab1(consegna)/template_lab01.ipynb
@@ -30,15 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import the necessary packages\n",
     "import numpy as np\n",
     "import cv2 as cv\n",
-    "from matplotlib import pyplot as plt\n",
-    "\n"
+    "from matplotlib import pyplot as plt"
    ]
   },
   {
@@ -76,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,33 +91,14 @@
     "        list: list of histograms\n",
     "    \"\"\"\n",
     "\n",
-    "    chan = []\n",
-    "    for i in range(0,2):\n",
-    "        chan.append(cv.calcHist([img], [i], None, [256], [0, 256]))\n",
-    "\n",
-    "    return chan\n",
-    "            \n",
-    "        \n",
-    "        \n",
-    "    \n",
-    "    \n",
-    "\n"
+    "    # Add your code here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "expected ':' (468988565.py, line 16)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[30], line 16\u001b[1;36m\u001b[0m\n\u001b[1;33m    for i in range(0,2)\u001b[0m\n\u001b[1;37m                       ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m expected ':'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define a function to plot together the three histograms of the image\n",
     "# (plot only one if it is grayscale)\n",
@@ -135,9 +115,6 @@
     "   \n",
     "\n",
     "    # Add your code here to generate the matplotlib figurecontaining the histograms\n",
-    "    for i in range(0,2)\n",
-    "        plt.hist(hists[i]) \n",
-    "        plt.show()   \n",
     "\n",
     "    # Convert figure to canvas\n",
     "    canvas = plt.get_current_fig_manager().canvas\n",
@@ -156,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,44 +164,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'hist' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Emilio\\Desktop\\lab computer vision\\lab1\\template_lab01.ipynb Cell 11\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m#DISPLAY THE IMAGE\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m#cv.imshow(\"barb\", img)\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39m#cv.waitKey(0)\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m#cv.destroyWindow(\"barb\")\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39m#histogram data\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m hD \u001b[39m=\u001b[39m calc_hists(img)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m show_histogram(hD)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \u001b[39m# Add your code here\u001b[39;00m\n",
-      "\u001b[1;32mc:\\Users\\Emilio\\Desktop\\lab computer vision\\lab1\\template_lab01.ipynb Cell 11\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mShows the histogram of the image.\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39m\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m \u001b[39m    img (numpy.ndarray): image containing the histograms\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m \u001b[39m \"\"\"\u001b[39;00m   \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m \u001b[39m# Add your code here to generate the matplotlib figurecontaining the histograms\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=16'>17</a>\u001b[0m \u001b[39m#plt.hist(hists[0]) \u001b[39;00m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m plt\u001b[39m.\u001b[39mplot(hist[\u001b[39m0\u001b[39m])   \n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=19'>20</a>\u001b[0m \u001b[39m# Convert figure to canvas\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/Emilio/Desktop/lab%20computer%20vision/lab1/template_lab01.ipynb#X13sZmlsZQ%3D%3D?line=20'>21</a>\u001b[0m canvas \u001b[39m=\u001b[39m plt\u001b[39m.\u001b[39mget_current_fig_manager()\u001b[39m.\u001b[39mcanvas\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'hist' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load image and and compute its histogram\n",
-    "img = cv.imread('./data/barbecue.jpg')\n",
-    "\n",
-    "#DISPLAY THE IMAGE\n",
-    "#cv.imshow(\"barb\", img)\n",
-    "#cv.waitKey(0)\n",
-    "#cv.destroyWindow(\"barb\")\n",
-    "#histogram data\n",
-    "hD = calc_hists(img)\n",
-    "\n",
-    "show_histogram(hD)\n",
-    "\n",
-    "\n",
-    "\n",
     "\n",
     "# Add your code here"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,18 +407,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unmatched ')' (745883566.py, line 20)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[16], line 20\u001b[1;36m\u001b[0m\n\u001b[1;33m    def __call__(self, image: np.ndarray)) -> None:\u001b[0m\n\u001b[1;37m                                         ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unmatched ')'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Define the main Filter class with the common methods\n",
     "# (this class will be used as a base class for the other filters)\n",
@@ -689,7 +631,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -703,7 +645,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
