--- a/lab1(consegna)/risi_emilio_lab01.ipynb
+++ b/lab1(consegna)/risi_emilio_lab01.ipynb
@@ -34,7 +34,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#author: Risi Emilio \n",
+    "#matr :  2122841\n",
+    "\n",
     "# Import the necessary packages\n",
+    "\n",
     "import numpy as np\n",
     "import cv2 as cv\n",
     "from matplotlib import pyplot as plt"
